--- a/.env
+++ b/.env
@@ -5,4 +5,4 @@ SECRET_KEY=django-insecure-hp#ysl@5ma7axbfc!8i_h5!ahl2yr3)6mhk#zs!yk5t*4h#75y
 EMAIL_HOST_USER=ag-mails@ag-media.co.jp
 EMAIL_HOST_PASSWORD=wvllexijazsmhbad
 
-URL_SET = afujisawa.pythonanywhere.com
+URL_SET = asahikosoku.pythonanywhere.com
